Version 1.2.1 update * Fixed an incompatiblity with the "Green Active Plugins!" that changed the text-align from left to center
git-svn-id: https://plugins.svn.wordpress.org/changelogger/trunk@180691 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,13 @@ td.clos-plugin-update {
 
 .plugin-update-tr div.clos-message {
 	font-weight: normal;
+	text-align: left;
 }
 
 div.clos-message h4, div.clos-message p {
 	margin: 0;
 	display: inline;
+	text-align: left;
 }
 
 div.clos-message ul {
